RESOLVED FIXED87681
[Regression] Text layout issues with complex characters
https://bugs.webkit.org/show_bug.cgi?id=87681
Summary [Regression] Text layout issues with complex characters
Philip Rogers
Reported 2012-05-28 15:59:55 PDT
Created attachment 144407 [details] Minimized testcase Looks like text layout with complex characters has regressed. Adding a tspan with a complex character to <text> causes other tspans to be laid out incorrectly. See attached minimized testcase. Original bug: crbug.com/129980
Attachments
Minimized testcase (858 bytes, image/svg+xml)
2012-05-28 15:59 PDT, Philip Rogers
no flags
Fix text positioning with non-bmp characters. (5.29 KB, patch)
2012-07-02 23:17 PDT, Philip Rogers
no flags
Philip Rogers
Comment 1 2012-07-02 23:17:44 PDT
Created attachment 150543 [details] Fix text positioning with non-bmp characters.
Nikolas Zimmermann
Comment 2 2012-07-03 03:21:25 PDT
Comment on attachment 150543 [details] Fix text positioning with non-bmp characters. Good catch, r=me.
WebKit Review Bot
Comment 3 2012-07-03 03:29:26 PDT
Comment on attachment 150543 [details] Fix text positioning with non-bmp characters. Clearing flags on attachment: 150543 Committed r121756: <http://trac.webkit.org/changeset/121756>
WebKit Review Bot
Comment 4 2012-07-03 03:29:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.